--- a/plugin.xml
+++ b/plugin.xml
@@ -1,58 +1,94 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0" 
+<plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        id="Umeng"
-        version="3.0.0">
-    
-    <name>Umeng</name>
-    
-    <js-module src="www/Umeng.js" name="Umeng">
-        <clobbers target="MobclickAgent" />
+        id="cordova-plugin-bell-umeng"
+        version="1.0.0">
+    <engines>
+      <engine name="cordova-plugman" version=">=5.0.0" />
+      <engine name="cordova-android" version=">=5.0.0" />
+      <engine name="cordova-ios" version=">=4.4.0" />
+    </engines>
+
+    <name>cordova-plugin-bell-umeng</name>
+
+    <description>
+      <![CDATA[
+        Cordova plugin for bell.ai to integrate Umeng Analytics, Push, Share etc.
+      ]]>
+    </description>
+
+    <author>https://github.com/TinyChou</author>
+
+    <keywords>
+      <![CDATA[
+        bell.ai,
+        Umeng,
+        analytics,
+        hybrid,
+        cordova,
+        Android,
+        ios
+      ]]>
+    </keywords>
+
+    <license>MIT</license>
+
+    <js-module src="www/analyticssdk.js" name="UmengAnalytics">
+      <runs />
     </js-module>
-    
+
     <!-- ios -->
     <platform name="ios">
-        
-        <header-file src="src/ios/UMPlugin.h" />
-        <source-file src="src/ios/UMPlugin.m" />
-        
-        <config-file target="config.xml" parent="/widget/plugins">
-            <feature name="Umeng">
-                <param name="ios-package" value="UMPlugin"/>
-            </feature>
-        </config-file>
-        <framework src="src/ios/UMMobClick.framework" custom="true" />
-        <framework src="CoreTelephony.framework" />
-        <framework src="libsqlite3.tbd"/>
-        <framework src="libz.tbd"/>
-        
+
+      <header-file src="src/ios/UMAnalyticsModule.h" />
+      <source-file src="src/ios/UMAnalyticsModule.m" />
+      <header-file src="src/ios/UMCommonModule.h" />
+      <source-file src="src/ios/UMCommonModule.m" />
+
+      <config-file target="config.xml" parent="/*">
+        <feature name="AnalyticsSDK">
+          <param name="ios-package" value="AnalyticsSDK"/>
+        </feature>
+      </config-file>
+      <framework src="src/ios/UMCommon.framework" custom="true" />
+      <framework src="src/ios/UMAnalytics.framework" custom="true" />
     </platform>
     <!-- android -->
     <platform name="android">
-        
-        <source-file src="src/android/umeng-analytics-v6.1.2.jar" target-dir="libs" />
-        <source-file src="src/android/UMPlugin.java" target-dir="src/com/umeng/plugin" />
-        
-        <config-file target="res/xml/config.xml" parent="/widget/plugins">
-            <feature name="Umeng">
-                <param name="android-package" value="com.umeng.plugin.UMPlugin"/>
-            </feature>
-        </config-file>
-        <config-file target="AndroidManifest.xml"  parent="application">
-            <!-- appkey -->
-            <meta-data android:name="UMENG_APPKEY" android:value="59433db2f43e485a010002fe" />
-            <meta-data android:name="UMENG_CHANNEL" android:value="Umeng-Channel"/>
-        </config-file>        
-        <config-file target="AndroidManifest.xml"  parent="/manifest">
-            <uses-permission android:name="android.permission.INTERNET" />
-            <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-            <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-            <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-            <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-            <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-            <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-            <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-        </config-file>
+      <config-file target="config.xml" parent="/*">
+        <feature name="AnalyticsSDK">
+          <param name="android-package" value="com.umeng.plugin.AnalyticsSDK" />
+        </feature>
+      </config-file>
+
+      <lib-file src="src/android/umeng-analytics-7.5.3.jar" />
+      <lib-file src="src/android/umeng-common-1.5.3.jar" />
+      <lib-file src="src/android/utdid4all-1.1.5.3_proguard.jar" />
+      <lib-file src="src/android/SecurityEnvSDK/SecurityEnvSDK-release-1.1.0.jar" />
+
+      <resource-file src="src/android/SecurityEnvSDK/jni/armeabi-v7a/libsecurityenv.so" arch="armeabi-v7a"
+        target="jniLibs/armeabi-v7a/libsecurityenv.so" />
+      <resource-file src="src/android/SecurityEnvSDK/jni/x86/libsecurityenv.so" arch="x86"
+        target="jniLibs/x86/libsecurityenv.so" />
+
+      <source-file src="src/android/PGCommonSDK.java" target-dir="src/com/umeng/plugin" />
+      <source-file src="src/android/AnalyticsSDK.java" target-dir="src/com/umeng/plugin" />
+
+      <config-file target="AndroidManifest.xml"  parent="/manifest/application">
+        <!-- appkey -->
+        <meta-data android:name="UMENG_APPKEY" android:value="59433db2f43e485a010002fe" />
+        <meta-data android:name="UMENG_CHANNEL" android:value="Umeng-Channel"/>
+      </config-file>
+      <config-file target="AndroidManifest.xml"  parent="/manifest">
+        <uses-permission android:name="android.permission.INTERNET" />
+        <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+        <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+        <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+        <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+        <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+        <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+        <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+      </config-file>
     </platform>
-    
+
 </plugin>
